# moss-tts-realtime

./: Cargo.toml  README.md  plugin.toml  run.sh
.github/workflows/: release.yml
embedded/: moss_tts_realtime.py
src/: lib.rs
