[package]
name = "moss-tts-realtime-loadable-plugin"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone workspace so this crate doesn't get pulled into the main
# workspace build (and so the cdylib + its build artifacts don't
# pollute the main `target/` dir for unrelated work). Mirrors
# `examples/echo-python-loadable/` and the Rust-side
# `examples/silero-vad-loadable/` shape.
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

# Canonical Python-plugin example. Ships `MossTTSRealtimeNode`
# (~52KB Python) + its vendored `mossttsrealtime` package (~224KB across
# 5 files) as a single `.so`/`.dylib`/`.dll`. Demonstrates that the
# `python_plugin_export!` macro handles non-trivial plugins with
# vendored sub-packages, multi-output streaming, and aux ports.
#
# What works today (this proposal's session 4):
# - Plugin cdylib builds.
# - Host can dlopen it and enumerate the factory.
# - Provisioning (Task 3.3.3) runs end-to-end: hash → extract →
#   parse PEP 723 → ensure_env. Provisioned venv installs transformers,
#   torch, etc. on first load.
#
# What's deferred (Task 3.3.4-3.3.6 in
# `openspec/changes/add-loadable-python-nodes/tasks.md`):
# - Subprocess spawn against the provisioned venv.
# - iceoryx2 IPC for control + input + output channels.
# - End-to-end text-delta-in / audio-chunks-out round-trip.

[dependencies]
remotemedia-plugin-sdk = { git = "https://github.com/matbeedotcom/remotemedia-sdk.git", rev = "a1f365e40a598645655cb5269b09c60096a24f43", features = ["python-plugin"] }

# `abi_stable` must be a direct dep so the attribute macros expanded
# by `plugin_export!()` (`#[sabi_extern_fn]`, `#[export_root_module]`)
# can resolve `::abi_stable` at the crate root. Plugin code itself
# never names abi_stable types — that's all inside the SDK.
abi_stable = "0.11"

# Proc macros can't be re-exported through plugin-sdk, so the plugin
# author calls include_dir! directly. The SDK macro takes the resulting
# `&'static Dir<'static>` by reference.
include_dir = "0.7"
